# Neko

./: .gitignore  .travis.yml  Cargo.toml  README.md  clippy.toml  index.html  rustfmt.toml  search-index.js
benches/: lib.rs
neko/: Neko.t.html  PtyDisplay.t.html  SPEC_ROOT.v.html  SPEC_ROOT_DEFAULT.v.html  constant.SPEC_ROOT.html  constant.SPEC_ROOT_DEFAULT.html  enum.NekoError.html  index.html  macro.account_at_rep!.html  macro.account_at_rep.html  macro.format_subneko!.html  macro.format_subneko.html  macro.format_subneko_err!.html  macro.format_subneko_err.html  macro.only_rep.html  macro.parse_number.html  macro.symbol.html  ml.dot  only_rep.m.html  sidebar-items.js  struct.Neko.html  trait.Parent.html  type.PtyDisplay.html  type.Result.html
neko/display/: MESSAGE_WIDTH.v.html  constant.MESSAGE_WIDTH.html  index.html  sidebar-items.js  struct.Display.html
neko/dynamic/: constant.SPEC_ROOT_DEFAULT.html  enum.CompositerError.html  index.html  sidebar-items.js  struct.Compositer.html  type.Result.html
neko/err/: enum.NekoError.html  type.Result.html
neko/graphic/: Draw.t.html  Emotion.t.html  EmotionError.t.html  GraphicError.t.html  PartError.t.html  SPEC_MAX_DRAW.v.html  SPEC_MAX_X.v.html  SPEC_MAX_XY.v.html  SPEC_MAX_Y.v.html  SPEC_SUBD_NCF.v.html  SPEC_SUBD_NCS.v.html  SPEC_SUBD_NCT.v.html  SheetError.t.html  SpriteError.t.html  Texel.t.html  TexelError.t.html  constant.SPEC_MAX_DRAW.html  constant.SPEC_MAX_X.html  constant.SPEC_MAX_XY.html  constant.SPEC_MAX_Y.html  (+22 more)
src/: cli.yml  err.rs  lib.rs  macros.rs  main.rs  prelude.rs
tests/: compositer.rs  compositer_command.rs  compositer_ffi.rs  manager.rs  persona.rs  size.rs  tooltip.rs
(+142 files in other folders)
