[package]
name            = "neko"
version         = "0.1.0"
authors         = [
	"adjivas <adjivas@users.noreply.github.com>",
	"brezaire <voncay@users.noreply.github.com>",
	"flime <LinFeiLong@users.noreply.github.com>",
	"jpepin <limaconoob@users.noreply.github.com>"
]
description     = ""
documentation   = "https://Arukana.github.io/Neko/neko"
repository      = "https://github.com/Arukana/Neko.git"
readme          = "README.md"
keywords        = ["neko", "glyphArt"]
license         = "GPL-3.0"
build           = "build.rs"

[[bin]]
name = "neko"
test = false
doc = false

[lib]
test = false
doctest = false

[features]
default            = []
compositer_command = []
compositer_ffi     = []
lints              = ["clippy", "nightly"]
nightly            = [] # for building with nightly and unstable features
unstable           = [] # for building with unstable features on stable Rust
debug              = [] # for building with debug messages
travis             = ["lints", "nightly"] # for building with travis-cargo

[build-dependencies.mml]
version = "0.1"

[dependencies.clippy]
version            = "*"
optional           = true

[dependencies.toml]
version            = "0.2"

[dependencies.git2]
version            = "0.6"

[dependencies.libc]
version            = "0.2"

[dependencies.pty-proc]
git                = "https://github.com/Arukana/PtyProc.git"
features           = ["task"]

[dependencies.editeur]
git                = "https://github.com/Arukana/Editor.git"

[dependencies.clap]
version = "*"
features = ["yaml", "suggestions", "color"]
